gets a blinky light going

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,5 +22,11 @@
 platform = atmelavr
 framework = arduino
 board = uno
-targets = upload
+#targets = upload
 
+
+[env:megaatmega2560]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+targets = upload
